fixed spacing error

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ li {
   background-image: url("img/bg1.png");
   background-repeat: no-repeat;
   background-color: #fff;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
 }
 
@@ -54,21 +54,21 @@ li {
   margin-left: 24px;
   margin-right: 24px;
   align-items: center;
+  font-size: 40px;
 }
 
 .heading1 {
-  flex: 1;
-  font-size: 40px;
+  font-size: 30px;
   font-family: "Inter", sans-serif;
-  line-height: 52px;
+  line-height: 36px;
   font-weight: 700;
   color: #172b4d;
   text-align: center;
   margin-bottom: 0;
+  margin-left: 24px;
 }
 
 .heading2 {
-  flex: 1;
   font-family: "Inter", sans-serif;
   font-size: 32px;
   font-weight: 700;
@@ -80,7 +80,6 @@ li {
 }
 
 .texting {
-  flex: 1;
   display: flex;
   margin-top: 30px;
   height: 164px;
@@ -90,7 +89,6 @@ li {
 }
 
 .text1 {
-  flex: 1;
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-size: 20px;
@@ -98,19 +96,19 @@ li {
   font-weight: normal;
   color: #172b4d;
   text-align: center;
-  margin: 20px 44px 0 44px;
+  margin: 0 20px;
+  margin-bottom: 0;
 }
 
 .icons {
-  flex: 1;
   display: flex;
   flex-direction: row;
   margin-left: auto;
   margin-right: auto;
+  justify-content: center;
 }
 
 .icon1 {
-  flex: 1;
   width: 19.99px;
   height: 19.96px;
 }
